# T1Mapping

./: CMakeLists.txt  README.md
T1Mapping/: CMakeLists.txt  T1Mapping.cxx  T1Mapping.xml
T1Mapping/Data/QIBA_phantom_Data/DICOM/: fa24.dcm  fa3.dcm  fa35.dcm  fa6.dcm  fa9.dcm
T1Mapping/Data/RegressionTests/QIBA001/Input/: QIBA001-mask-label.nrrd  QIBA001-phantom.nrrd  README.md
T1Mapping/Data/RegressionTests/QIBA001/Reference/: QIBA001_AllFlipAngles-T1VFA.nrrd  QIBA001_AllFlipAngles-fittedVolume.nrrd  QIBA001_AllFlipAngles-rsqrVolume.nrrd  QIBA001_ExclFlipAngles-T1VFA.nrrd  QIBA001_ExclFlipAngles-fittedVolume.nrrd  QIBA001_ExclFlipAngles-rsqrVolume.nrrd  QIBA001_InclFlipAngles-T1VFA.nrrd  QIBA001_InclFlipAngles-fittedVolume.nrrd  QIBA001_InclFlipAngles-rsqrVolume.nrrd  QIBA001_MaskedInput-T1VFA.nrrd  QIBA001_MaskedInput-fittedVolume.nrrd  QIBA001_MaskedInput-rsqrVolume.nrrd
T1Mapping/Testing/: CMakeLists.txt  T1MappingTest.cxx
